[package]
name = "pitch-detector"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "A frequency and note detector library written in Rust."
repository = "https://github.com/mherrerarendon/pitch-detector"
readme = "README.md"
keywords = ["pitch", "detection", "frequency", "note"] 
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "test_data/*",
    ".github/*",
    ".vscode/*",
]

[lib]
name = "pitch_detector"
path = "src/lib.rs"

[features]
test_utils = ["serde", "serde_json", "float-cmp"]
# hinted =["smoothed_z_score", "peak_finder"]
hinted =["peak_finder"]
plot = ["plotters"]

[[example]]
name = "spectrum_plot"
required-features = ["test_utils", "plot"]

[[example]]
name = "basic_usage"
required-features = ["hinted"]

[dependencies]
anyhow = "1.0.52"
rustfft = "6.0.1"
fitting = "0.3.0"
num-traits = { version = "0.2", default-features = false }
apodize = "1.0.0"
itertools = "0.10.3"
serde_json = {version = "1.0.74", optional = true}
serde = {version = "1.0.133", features = ["derive"], optional = true}
peak_finder = {version = "1.0.1", optional = true}
plotters = {version = "0.3.1", optional = true}
float-cmp = {version = "0.9.0", optional = true}

[dev-dependencies]
float-cmp = "0.9.0"
serde_json = "1.0.74"
serde = {version = "1.0.133", features = ["derive"]}
plotters = "0.3.1"
criterion = "0.3.5"

[[bench]]
name = "bench_pitch_detectors"
harness = false

