[package]
name = "pitch-detector"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "A frequency and note detector library written in Rust."
repository = "https://github.com/mherrerarendon/pitch-detector"
readme = "README.md"
keywords = ["pitch", "detection", "frequency", "note"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "test_data/*",
    ".github/*",
    ".vscode/*",
]

[lib]
name = "pitch_detector"
path = "src/lib.rs"

[[example]]
name = "basic_usage"

[dependencies]
anyhow = "1.0.52"
rustfft = "6.0.1"
fitting = "0.3.0"
num-traits = { version = "0.2", default-features = false }
apodize = "1.0.0"
itertools = "0.10.3"
peak_finder = {version = "1.0.1"}
float-cmp = {version = "0.9.0", optional = true}
ndarray = "0.16.1"

[dev-dependencies]
float-cmp = "0.9.0"
criterion = "0.3.5"
hound = "3.5.1"

[[bench]]
name = "bench_pitch_detectors"
harness = false

