[package]
name = "tuner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
cpal = "0.15.3"
crossterm = "0.28.1"
dasp_sample = "0.11.0"
pitch-detector = { path = "../pitch-detector"}
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
